cups (1.4.5-3) UNRELEASED; urgency=low

  * IMPORTANT: This state of the cups package builds but does not install
    (pdftoraster conflicts with ghostscript package). DO NOT UPLOAD.

  [ Till Kamppeter ]
  * debian/local/filters/pdf-filters/filter/pdftoraster.cxx,
    debian/local/filters/pdf-filters/conf/pdftoraster.convs,
    debian/local/filters/pdf-filters/README,
    debian/local/filters/pdf-filters/addtocups
    debian/local/filters/pdf-filters/conf/HP-PhotoSmart_Pro_B8300-hpijs-pdftoijs.ppd,
    debian/local/filters/pdf-filters/config-scripts/cups-pdf-filters.m4,
    debian/local/filters/pdf-filters/removefromcups: Upstream changes of
    the PDF filter add-on package:
     o Added the Poppler-based pdftoraster filter. This filter is much faster
       than the Ghostscript-based filter (LP: #668800).
     o Cleaned up the sample PPD file for pdftoijs (does not go into the
       Debian/Ubuntu package of CUPS).
  * debian/patches/cups-avahi.dpatch: Updated to fix assertion failure
    (LP: #707592, Red Hat bug #672143).

  [ Martin Pitt ]
  * debian/patches/ubuntu-upstart.dpatch: Don't ignore failures from
    apparmor-profile-load.

 -- Martin Pitt <mpitt@debian.org>  Thu, 03 Feb 2011 19:37:45 +0100

cups (1.4.5-2) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/patches/cups-avahi.dpatch: Added patch from Tim Waugh from Red Hat
    to implement full Avahi support, not only for printer discovery by the
    "dnssd" backend but also for print queue broadcasting and browsing by the
    scheduler (CUPS daemon). Fixes LP: #465916.
  * debian/patches/dnssd-avahi.dpatch: Removed, is part of new
    cups-avahi.dpatch.
  * debian/patches/quiesce-bonjour-warning.dpatch: Removed, not needed any
    more with the new cups-avahi.dpatch.
  * debian/rules: Added "--with-local_protocols='CUPS dnssd'
    --with-remote_protocols='CUPS dnssd'" to the command line of "./configure".
    This adds support for DNS-SD-based browsing and broadcasting by default.